--- a/templates/charts.html
+++ b/templates/charts.html
@@ -33,7 +33,7 @@
                     <div class="card-body">
                         <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" width="100%" />
                     </div>
-                    <div class="card-footer small text-muted">{{ data['knn_accuracy'] }}<br/>{{ data['knn_precision'] }}
+                    <div class="card-footer small text-muted"><strong>KNN Accuracy:</strong><br/>{{ data['knn_accuracy'] }}<br/><strong>KNN Precision:</strong><br/>{{ data['knn_precision'] }}
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" width="100%" />
                     </div>
-                    <div class="card-footer small text-muted">{{ data['decisiontree_accuracy'] }}<br />{{ data['decisiontree_precision'] }}</div>
+                    <div class="card-footer small text-muted"><strong>Decision Tree Accuracy:</strong><br/>{{ data['decisiontree_accuracy'] }}<br /><strong>Decision Tree Precision:</strong><br/>{{ data['decisiontree_precision'] }}</div>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -58,7 +58,7 @@
                     <div class="card-body">
                         <img src="/static/assets/img/RandomForest_heatmap.png" alt="Random Tree Heatmap" class="img-fluid" width="100%" />
                     </div>
-                    <div class="card-footer small text-muted">{{ data['randomforest_accuracy'] }}<br />{{ data['randomforest_precision'] }}</div>
+                    <div class="card-footer small text-muted"><strong>Random Forest Accuracy:</strong><br/>{{ data['randomforest_accuracy'] }}<br /><strong>Random Forest Precision:</strong><br/>{{ data['randomforest_precision'] }}</div>
                 </div>
             </div>
         </div>
