--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div class="col-xl-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-chart-area me-1"></i>
+                        <i class="fas fa-heat me-1"></i>
                         KNN Chart
                     </div>
                     <div class="card-body">
@@ -40,7 +40,7 @@
             <div class="col-xl-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-chart-area me-1"></i>
+                        <i class="fas fa-heat me-1"></i>
                         Decision Tree Chart
                     </div>
                     <div class="card-body">
@@ -51,7 +51,7 @@
             <div class="col-xl-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-chart-area me-1"></i>
+                        <i class="fas fa-heat me-1"></i>
                         Random Forest Chart
                     </div>
                     <div class="card-body">
