--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                         Charts > Decision Tree
                     </a>
                     <a class="nav-link" href="{{ url_for('group') }}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                         Our Group
                     </a>
                 </div>
