--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
                     <div class="card-body">
                         <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" />
                     </div>
+                    <div class="card-footer small text-muted"><a href="{{ url_for('decision') }}">View More</a><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
             <div class="col-xl-6">
