--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,10 @@
     <!-- Navbar-->
     <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
         <li class="nav-item">
+            <a class="nav-link" id="navbarReload" href="{{ url_for('reload') }}"><i class="fas fa-redo-alt"></i>
+                Reload</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" id="navbarGroup" href="{{ url_for('group') }}"><i class="fas fa-users"></i>
                 Group 12</a>
         </li>
@@ -68,6 +72,11 @@
     </div>
     <div id="layoutSidenav_content">
         <main>
+            <div class="card mb-4">
+                <div class="card-body">
+                    If the page is not showing correctly, please click the <i class="fas fa-redo-alt"></i> Reload button above.
+                </div>
+            </div>
             {% block content %}
             {% endblock %}
         </main>
