--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <!-- Navbar-->
     <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
         <li class="nav-item">
-            <a class="nav-link" id="navbarReload" href="{{ url_for('reload') }}"><i class="fas fa-redo-alt"></i>
+            <a class="nav-link" id="navbarReload" href="{{ url_for('redir') }}"><i class="fas fa-redo-alt"></i>
                 Reload</a>
         </li>
         <li class="nav-item">
